Added more recipes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin recipes</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/bltsalad.html">BLT Salad</a></li>
+    </ul>
+    
     
     </body>
 </html>
