--- a/recipes/bltsalad.html
+++ b/recipes/bltsalad.html
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 		<h1>BLT Salad</h1>
-		<img src="../images/salad.jpg" alt="pizza" width="250" />
+		<img src="../images/salad.jpg" alt="pizza"/>
+        <hr>
 		<h2>Description</h2>
 		<p><em>This recipe is reminiscent of the classic BLT or bacon, lettuce, and tomato sandwich. It's a great summertime salad!</em></p>
+        <hr>
 		<h2>Ingredients</h2>
 		<ul>
 			<li>1 pound bacon</li>
@@ -22,6 +24,7 @@
 			<li>2 large tomatoes, chopped</li>
             <li>2 cups seasoned croutons</li>
 		</ul>
+        <hr>
 		<h2>Steps</h2>
 		<ol>
 			<li>
