--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 		<h1>Lasagna</h1>
-		<img src="../images/lasagna.jpg" alt="lasagna" width="250" />
+		<img src="../images/lasagna.jpg" alt="lasagna"/>
+        <hr>
 		<h2>Description</h2>
 		<p><em>This is a faster, and less expensive lasagna.</em></p>
+        <hr>
 		<h2>Ingredients</h2>
 		<ul>
 			<li>1 (16 ounce) package lasagna noodles</li>
@@ -21,6 +23,7 @@
 			<li>½ pound shredded Cheddar cheese</li>
 			<li>1 pint ricotta cheese</li>
 		</ul>
+        <hr>
 		<h2>Steps</h2>
 		<ol>
 			<li>
