--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 		<h1>Bakery-Style Pizza</h1>
-		<img src="../images/pizza.jpg" alt="pizza" width="250" />
+		<img src="../images/pizza.jpg" alt="pizza"/>
+        <hr>
 		<h2>Description</h2>
 		<p><em>Now found exclusively at one well-known pizza garden in Gravesend, Brooklyn, this style of pizza was once found in neighborhood bakeries. This pizza is deceivingly light, crisp, and slightly spicy. Enjoy with a can of soda.</em></p>
+        <hr>
 		<h2>Ingredients</h2>
 		<ul>
 			<li>1 ¼ cups warm water</li>
@@ -22,6 +24,7 @@
 			<li>8 ounces low-moisture whole-milk mozzarella, very thinly sliced</li>
             <li>¼ cup grated Pecorino Romano cheese</li>
 		</ul>
+        <hr>
 		<h2>Steps</h2>
 		<ol>
 			<li>
