--- a/recipes/bltsalad.html
+++ b/recipes/bltsalad.html
@@ -6,11 +6,11 @@
 		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 	<body>
-		<h1>BLT Salad</h1>
-		<img src="../images/salad.jpg" alt="pizza"/>
+		<h1 class="desc">BLT Salad</h1>
+		<img class="imag" src="../images/salad.jpg" alt="pizza"/>
         <hr>
-		<h2>Description</h2>
-		<p><em>This recipe is reminiscent of the classic BLT or bacon, lettuce, and tomato sandwich. It's a great summertime salad!</em></p>
+		<h2 class="desc">Description</h2>
+		<p class="desc"><em>This recipe is reminiscent of the classic BLT or bacon, lettuce, and tomato sandwich. It's a great summertime salad!</em></p>
         <hr>
 		<h2>Ingredients</h2>
 		<ul>
