--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="../css/styles.css">
 	</head>
 	<body>
-		<h1>Lasagna</h1>
-		<img src="../images/lasagna.jpg" alt="lasagna"/>
+		<h1 class="desc">Lasagna</h1>
+		<img class="imag" src="../images/lasagna.jpg" alt="lasagna"/>
         <hr>
-		<h2>Description</h2>
-		<p><em>This is a faster, and less expensive lasagna.</em></p>
+		<h2 class="desc">Description</h2>
+		<p class="desc"><em>This is a faster, and less expensive lasagna.</em></p>
         <hr>
 		<h2>Ingredients</h2>
 		<ul>
