--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,11 +6,11 @@
 		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 	<body>
-		<h1>Bakery-Style Pizza</h1>
-		<img src="../images/pizza.jpg" alt="pizza"/>
+		<h1 class="desc">Bakery-Style Pizza</h1>
+		<img class="imag" src="../images/pizza.jpg" alt="pizza"/>
         <hr>
-		<h2>Description</h2>
-		<p><em>Now found exclusively at one well-known pizza garden in Gravesend, Brooklyn, this style of pizza was once found in neighborhood bakeries. This pizza is deceivingly light, crisp, and slightly spicy. Enjoy with a can of soda.</em></p>
+		<h2 class="desc">Description</h2>
+		<p class="desc"><em>Now found exclusively at one well-known pizza garden in Gravesend, Brooklyn, this style of pizza was once found in neighborhood bakeries. This pizza is deceivingly light, crisp, and slightly spicy. Enjoy with a can of soda.</em></p>
         <hr>
 		<h2>Ingredients</h2>
 		<ul>
