New font and a different CSS for <hr>

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,14 +4,27 @@
 		<meta charset="UTF-8" />
 		<title>Pizza</title>
 		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<h1 class="desc">Bakery-Style Pizza</h1>
-		<img class="imag" src="../images/pizza.jpg" alt="pizza"/>
-        <hr>
+		<img class="imag" src="../images/pizza.jpg" alt="pizza" />
+		<hr />
 		<h2 class="desc">Description</h2>
-		<p class="desc"><em>Now found exclusively at one well-known pizza garden in Gravesend, Brooklyn, this style of pizza was once found in neighborhood bakeries. This pizza is deceivingly light, crisp, and slightly spicy. Enjoy with a can of soda.</em></p>
-        <hr>
+		<p class="desc">
+			<em
+				>Now found exclusively at one well-known pizza garden in
+				Gravesend, Brooklyn, this style of pizza was once found in
+				neighborhood bakeries. This pizza is deceivingly light, crisp,
+				and slightly spicy. Enjoy with a can of soda.</em
+			>
+		</p>
+		<hr />
 		<h2>Ingredients</h2>
 		<ul>
 			<li>1 ¼ cups warm water</li>
@@ -21,28 +34,47 @@
 			<li>¼ cup olive oil, divided</li>
 			<li>1 (28 ounce) can plain crushed tomatoes</li>
 			<li>1 (14 ounce) can pizza sauce (such as Don Peppino®)</li>
-			<li>8 ounces low-moisture whole-milk mozzarella, very thinly sliced</li>
-            <li>¼ cup grated Pecorino Romano cheese</li>
+			<li>
+				8 ounces low-moisture whole-milk mozzarella, very thinly sliced
+			</li>
+			<li>¼ cup grated Pecorino Romano cheese</li>
 		</ul>
-        <hr>
+		<hr />
 		<h2>Steps</h2>
 		<ol>
 			<li>
-				Combine water and yeast in a small bowl. Let stand until yeast softens and begins to form a creamy foam, about 5 minutes.
+				Combine water and yeast in a small bowl. Let stand until yeast
+				softens and begins to form a creamy foam, about 5 minutes.
 			</li>
 			<li>
-				Combine flour and salt together in the bowl of a stand mixer fitted with a dough hook attachment. Pour in yeast mixture. Knead dough until smooth, about 7 minutes.
+				Combine flour and salt together in the bowl of a stand mixer
+				fitted with a dough hook attachment. Pour in yeast mixture.
+				Knead dough until smooth, about 7 minutes.
 			</li>
 			<li>
-				Grease a large bowl lightly with olive oil. Form dough into a tight ball and lightly grease the top. Place in the bowl; cover loosely with plastic wrap. Let rise until doubled in volume, about 30 minutes.
+				Grease a large bowl lightly with olive oil. Form dough into a
+				tight ball and lightly grease the top. Place in the bowl; cover
+				loosely with plastic wrap. Let rise until doubled in volume,
+				about 30 minutes.
 			</li>
 			<li>
-				Mix crushed tomatoes and pizza sauce together in a bowl to make sauce.
+				Mix crushed tomatoes and pizza sauce together in a bowl to make
+				sauce.
 			</li>
-            <li>Grease a heavy-gauge rimmed 12x17-inch baking sheet generously with olive oil. Press dough into the bottom. Prick dough all over with a fork. Arrange mozzarella cheese slices over dough; cover with 1 cup sauce. Sprinkle Pecorino Romano cheese on top. Drizzle remaining olive oil over pizza.</li>
-            <li>Let pizza rise in a warm area until puffy, about 1 hour.</li>
-            <li>Preheat oven to 450 degrees F (230 degrees C).</li>
-            <li>Bake pizza on the center rack of the preheated oven until edges are very dark brown but top is not burnt, 15 to 20 minutes. Cool in the pan for 5 minutes before slicing into squares.</li>
+			<li>
+				Grease a heavy-gauge rimmed 12x17-inch baking sheet generously
+				with olive oil. Press dough into the bottom. Prick dough all
+				over with a fork. Arrange mozzarella cheese slices over dough;
+				cover with 1 cup sauce. Sprinkle Pecorino Romano cheese on top.
+				Drizzle remaining olive oil over pizza.
+			</li>
+			<li>Let pizza rise in a warm area until puffy, about 1 hour.</li>
+			<li>Preheat oven to 450 degrees F (230 degrees C).</li>
+			<li>
+				Bake pizza on the center rack of the preheated oven until edges
+				are very dark brown but top is not burnt, 15 to 20 minutes. Cool
+				in the pan for 5 minutes before slicing into squares.
+			</li>
 		</ol>
 		<a href="../index.html">Home</a>
 	</body>
