Improved the look of the code

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,18 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Lasagna</title>
-        <link rel="stylesheet" href="../css/styles.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<h1 class="desc">Lasagna</h1>
-		<img class="imag" src="../images/lasagna.jpg" alt="lasagna"/>
-        <hr>
+		<img class="imag" src="../images/lasagna.jpg" alt="lasagna" />
+		<hr />
 		<h2 class="desc">Description</h2>
-		<p class="desc"><em>This is a faster, and less expensive lasagna.</em></p>
-        <hr>
+		<p class="desc">
+			<em>This is a faster, and less expensive lasagna.</em>
+		</p>
+		<hr />
 		<h2>Ingredients</h2>
 		<ul>
 			<li>1 (16 ounce) package lasagna noodles</li>
@@ -26,7 +31,7 @@
 			<li>½ pound shredded Cheddar cheese</li>
 			<li>1 pint ricotta cheese</li>
 		</ul>
-        <hr>
+		<hr />
 		<h2>Steps</h2>
 		<ol>
 			<li>
@@ -49,6 +54,6 @@
 				and bubbly.
 			</li>
 		</ol>
-        <a href="../index.html">Home</a>
+		<a href="../index.html">Home</a>
 	</body>
 </html>
